--- a/roles/lynis-role/tasks/KRNL.yml
+++ b/roles/lynis-role/tasks/KRNL.yml
@@ -17,17 +17,28 @@
     create: yes
     state: present    
 
+# ONT-8104 Run 'docker info' to see warnings
+- name: Disable IPv4 forwarding by default
+  set_fact:
+    net_ipv4_conf_all_forwarding: 0
+
+- name: Enable IPv4 forwarding if Docker installed
+  set_fact:
+    net_ipv4_conf_all_forwarding: 1
+  when: "'docker-ce' in ansible_facts.packages"
+
 - name: KRNL-6000 net.ipv6.conf.all.accept_redirects
   sysctl: 
-    name: "{{ item }}"
-    value: "0"
+    name: "{{ item.name }}"
+    value: "{{ item.value }}"
     state: present
     reload: yes
   with_items:
-    - kernel.sysrq
-    - net.ipv4.conf.all.forwarding
-    - net.ipv4.conf.default.accept_source_route
-    - net.ipv4.conf.all.send_redirects
-    - net.ipv4.conf.default.accept_redirects
-    - net.ipv6.conf.all.accept_redirects
-    - net.ipv6.conf.default.accept_redirects    
+    - { name: kernel.sysrq, value: "0" }
+    - { name: net.ipv4.conf.all.forwarding, value: "{{ net_ipv4_conf_all_forwarding }}" }
+    - { name: net.ipv4.conf.default.accept_source_route, value: "0" }
+    - { name: net.ipv4.conf.all.send_redirects, value: "0" }
+    - { name: net.ipv4.conf.default.accept_redirects, value: "0" }
+    - { name: net.ipv6.conf.all.accept_redirects, value: "0" }
+    - { name: net.ipv6.conf.default.accept_redirects, value: "0" }
+
