--- a/roles/lynis-role/tasks/LOGG.yml
+++ b/roles/lynis-role/tasks/LOGG.yml
@@ -7,12 +7,8 @@
     group: root
     mode: u=rw,g=rw,o=r
   register: logg
-
-- name: Restart rsyslog 
-  service:
-    name: rsyslog
-    state: restarted
-  when: logg.changed
+  notify:
+    - restart rsyslog
 
 
   
