--- a/roles/lynis-role/handlers/main.yml
+++ b/roles/lynis-role/handlers/main.yml
@@ -10,3 +10,13 @@
   service:
     name: rsyslog
     state: restarted    
+
+- name: restart apache2
+  service:
+    name: apache2
+    state: restarted
+
+- name: restart ntp
+  service:
+    name: ntp
+    state: restarted    
